--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Flaskr</title>
-        <link rel="stylesheet" href="static/estilo.css">
+        <link rel="stylesheet" href="/static/estilo.css">
     </head>
     <body>
         <div class="pagina">
@@ -10,7 +10,7 @@
   
             <div class="metanav">
                 {% if not session.logado %}
-                    <a href="">login</a>
+                    <a href="{{ url_for('login') }}">login</a>
                 {% else %}
                     <a href="">logout</a>
                 {% endif %}
